Fri Apr 28 13:46:43 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/ORB_Local_Config/Bunch/Test.cpp:
        * tests/ORB_Local_Config/Limits/Test.cpp:
        * tests/ORB_Local_Config/Service_Dependency/Test.cpp:
        * tests/ORB_Local_Config/Shared/Test.cpp:
        * tests/ORB_Local_Config/Simple/Test.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/Test.cpp:

          Updated to shut up unused variable warnings on builds where
          ACE_NDEBUG has been defined.

Thu Apr 27 21:09:51 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Profile.cpp:
          Fix a problem that caused the endpoint selector to spin when
          using shared profiles and none of the endpoints were valid.

Thu Apr 27 15:03:08 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/ORB_Local_Config/Bunch/Test.cpp:
        * tests/ORB_Local_Config/Limits/Test.cpp:
        * tests/ORB_Local_Config/Simple/Test.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/Test.cpp:

          Fixed fuzz issues (unmatched ACE_TRACE)

        * tests/ORB_Local_Config/Service_Dependency/Service_Config_DLL.cpp:
        * tests/ORB_Local_Config/Service_Dependency/Service_Dependency.mpc:

          Modified to change the DLL name to avoid name conflict with the
          one in ACE_ROOT/tests.

Thu Apr 27 14:20:02 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/IIOP_Endpoint.cpp:
          Fixed a recursion problem with the IPv6 endpoint selection.

        * tao/PortableServer/POAManagerFactory.cpp:
          Cleaned up compiler warnings.

Thu Apr 27 06:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/ORB_Local_Config/lib/lib.mpc:
          Added base project, this would at least get our builds running again

Thu Apr 27 03:46:34 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/EndpointPolicy/Endpoint_Acceptor_Filter.cpp:

          Found the trouble that was crashing the endpoint test. It was